# IBKit

./: .env  .gitignore  Dockerfile  README.md  __init__.py  classnote.md  cli.py  compose.debug.yaml  compose.yaml  config.py  del.py  hgr.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: company.py  comparable_set.py  comparable_sets.py  health.py  snapshots.py
backend/: exceptions.py
backend/analytics/: multiples_graph.py  stock_graph.py  stock_tests.py
backend/api/: company.py  comparable_set.py  health.py  snapshots.py
backend/domain/: base.py  company.py  comparables.py
backend/ingest/: companies_fields.py  companies_snapshot_fields.py  company_input_holder.py  fetch.py  projection_config_fields.py  stage_params_fields.py  webhook.py
backend/services/: comparables_service.py
backend/simplai/: ai.py
backend/utils/: converge.py  decorators.py  logger.py  redis_client.py  stat.py
db/: conn.py  database.py  migrate.py
db/migrations/: 001_create_companies.sql  002_create_financial_snapshot.sql  003_create_valuation_multiples.sql  004_create_comparables_sets.sql
db/repositories/: base-repository.py  base_repository.py  company-repository.py  company_repository.py  comparable_repository.py  multiples-repository.py  snapshot-repository.py  (+2 more)
domain/: company.py  comparables.py
ingest/: fetch.py
services/: comparables_service.py
simplai/: ai.py
tests/: service_test.py  test_base_repository.py  test_fetch.py  test_service.py
utils/: converge.py  decorators.py  logger.py  redis_client.py
virtual/: pyvenv.cfg
(+6 files in other folders)
